<resources>
    <string name="app_name">RicipeYape</string>
    <string name="hint_search_recipe">search recipe</string>
    <string name="hint_name_recipe">Name Recipe</string>
    <string name="hint_name_ingredients">Name of the ingredients for the recipe</string>
    <string name="string_hint_descriptions">Descripcion</string>
    <string name="image_of_recipe">image of recipe</string>
    <string name="description">Description</string>
    <string name="hint_list_empty">List Empty</string>
    <string name="opps_nothing_conection">Oops Parece que no tienes conexion a internet por favor ingresa de nuevo cuando mejore tu conexion</string>
</resources>