<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RecipeActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:backgroundTint="@color/white"
        android:hint="@string/hint_search_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:singleLine="true"
            android:maxLines="1"
            android:imeOptions="actionDone"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/img_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/dimen_100dp"
        android:visibility="gone"
        android:src="@drawable/ic_list_empty"
        android:contentDescription="@string/hint_list_empty" />

    <TextView
        android:id="@+id/txt_Empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold"
        android:text="@string/hint_list_empty"/>
    <TextView
        android:id="@+id/txt_conection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimen_12sp"
        android:visibility="gone"
        android:text="@string/opps_nothing_conection"
        android:gravity="center"
        android:layout_marginStart="@dimen/dimen_14dp"
        android:layout_marginEnd="@dimen/dimen_14dp"
        android:layout_marginTop="@dimen/dimen_12dp"/>
</LinearLayout>